RESOLVED FIXED161909
CachedFont do not need to be updated according Origin/Fetch mode
https://bugs.webkit.org/show_bug.cgi?id=161909
Summary CachedFont do not need to be updated according Origin/Fetch mode
youenn fablet
Reported 2016-09-13 05:49:49 PDT
WebKit is currently ignoring CORS for any font related stuff. As long as this is valid, CachedFont does not need to get updated before being reused.
Attachments
Patch (2.58 KB, patch)
2016-09-13 05:54 PDT, youenn fablet
no flags
Patch for landing (3.56 KB, patch)
2016-09-16 02:13 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-09-13 05:54:44 PDT
youenn fablet
Comment 2 2016-09-16 02:13:19 PDT
Created attachment 289051 [details] Patch for landing
WebKit Commit Bot
Comment 3 2016-09-16 02:46:16 PDT
Comment on attachment 289051 [details] Patch for landing Clearing flags on attachment: 289051 Committed r206017: <http://trac.webkit.org/changeset/206017>
WebKit Commit Bot
Comment 4 2016-09-16 02:46:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.