CachedFont do not need to be updated according Origin/Fetch mode https://bugs.webkit.org/show_bug.cgi?id=161909

Patch by Youenn Fablet <youenn@apple.com> on 2016-09-16
Reviewed by Sam Weinig.

No change of behavior.

* loader/cache/CachedFont.h: Ensuring CachedFont is not reused.
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::updateCachedResourceWithCurrentRequest): Doing direct reuse for CachedFont as WebKit is ignoring CORS for all fonts related stuff.

Canonical link: https://commits.webkit.org/180190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206017 268f45cc-cd09-0410-ab3c-d52691b4dbfc